# Flow-Code

./: .env.example  .gitignore  .mcp.json  README.md  opencode.json  package-lock.json  package.json  pyproject.toml
docs/planning/: README.md  audience.md  brainstorming.md  how-to-use.md  idea.md
docs/product-vision/: ARCHITECTURE.md  EXECUTION-MAP-PLAN.md  LLM-TESTING.md  NEXT-STEPS.md  ORCHESTRATOR-POC-PLAN.md  README.md  ROADMAP.md  SPEC.md  UPDATE-MAP-PLAN.md  goal.md  v1-strategy.md
experiments/: .gitignore
experiments/3d-layered/: CLAUDE.md  app.js  build_graph.py  graph.embeddings.npz  graph.json  index.html  label_graph.py  parse_calls.py
experiments/synthetic-flow/: README.md  actual_flow.json  build_actual_flow.py  build_function_embeddings.py  build_synthetic_flow.py  build_tier_embeddings.py  build_tier_embeddings_multi.py  compare.py  execution_score.py  execution_score_duet.py  ground_truth_flow.json  overlay_water.py  parse_codebase.py  (+13 more)
fixtures/golden-fastapi/: README.md  pyproject.toml
fixtures/golden-fastapi/src/golden_app/: __init__.py  app.py  core.py
fixtures/golden-fastapi/tests/: test_app.py  test_core.py
poc-brainstorm-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
samples/: docstring.patch  example_overlay.json
scripts/: brainstorm-api.sh  dev-test.sh  test-session-flow.sh
tests/: conftest.py  test_diff_overlay.py  test_entrypoint_heuristics.py  test_execution_ir_golden.py  test_execution_ir_graph.py  test_execution_ir_uncertainty.py  test_execution_ir_validate.py  test_index_honesty.py
(+44 files in other folders)
