[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcode"
version = "0.1.0"
description = "Language-agnostic static analysis graph generation for Python and TypeScript codebases"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ts = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
flowcode = "flowcode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
