[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-fastapi"
version = "0.1.0"
description = "Canonical FastAPI fixture for raw-indexer development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
